<resources>
    <string name="app_name">Damn Cocktail</string>
    <string name="btn_acceder">Sign in</string>
    <string name="hintetEmail">Email</string>
    <string name="hintetPassword">Password</string>
    <string name="btn_registrar">Register</string>
    <string name="btn_borrar_cuenta">Delete Account</string>
    <string name="borrar_ok">Account deleted successfully</string>
    <string name="borrar_no_ok">Error deleting account</string>
    <string name="no_datos">Missing email or password</string>
    <string name="registro_ok">User registered successfully</string>
    <string name="registro_no_ok">Error registering user</string>
    <string name="email_no_valido">Invalid email format entered</string>
    <string name="pwd_no_valido">Password does not meet requirements</string>
    <string name="pwd_no_ok">Incorrect password</string>
    <string name="et_nueva_pwd">New password</string>
    <string name="btn_cambiar_pwd">Change Password</string>
    <string name="cambiar_pwd_ok">Password updated</string>
    <string name="cambiar_pwd_no_ok">Error changing password</string>
    <string name="cuenta_google">Action disabled with Google account</string>
    <string name="no_registrado">User not registered or incorrect password</string>
    <string name="registro">Register</string>
    <string name="registro_mensaje">User not registered, do you want to register this user?</string>
    <string name="usuario_ya_registrado">User already registered</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="tv_valid_pwd">Password must contain at least one uppercase letter, one lowercase letter,
        one number, and one of the following special characters: ?¿!#%$</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frase_inicio">Shake it \'til you make it! The only app that guarantees a happy ending to your night.</string>
    <string name="tvFiltro">Choose your filter:</string>
    <string name="btnFiltrar">Filter</string>
    <string name="tv_ingredientes_cocktail">Ingredients:</string>
    <string name="no_internet">There is not Internet connection</string>
    <string name="api_error">API Response error</string>
    <string name="tv_medidas_ingredientes_cocktail">Measures:</string>
    <string name="et_nombre_cocktail">Enter the name of the cocktail</string>
    <string name="btn_busca_cocktail">SEARCH</string>
    <string name="radio_alcoholicas">Alcoholic Drinks</string>
    <string name="radio_no_alcoholicas">No Alcoholic Drinks</string>
    <string name="content_descr_cocktail">COCKTAIL</string>
    <string name="et_ingrediente_cocktail">Enter an ingredient</string>
    <string name="no_cocktail">There is no cocktails with that ingredient. Try again!</string>
    <string name="et_primera_letra_cocktail">Enter the first letter of the cocktail</string>
    <string name="no_data">There is no cocktails for that name. Try again!</string>
    <string name="no_ingredient">There is no cocktails for that letter. Try again!</string>
    <string name="no_letra">Introduce a letter</string>
    <string name="togglebutton_no_favorite">NO FAVORITE</string>
    <string name="togglebutton_favorite">FAVORITE</string>
</resources>