<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margen_app"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Radio Group para el filtro de bebidas -->
    <RadioGroup
        android:id="@+id/radioGroupFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margen_app"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Radio Button para bebidas alcohólicas -->
        <RadioButton
            android:id="@+id/radioButtonAlcoholicas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_alcoholicas" />

        <!-- Radio Button para bebidas no alcohólicas -->
        <RadioButton
            android:id="@+id/radioButtonNoAlcoholicas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_no_alcoholicas" />
    </RadioGroup>

    <!-- Botón de filtro -->
    <Button
        android:id="@+id/btnFiltrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_busca_cocktail"
        app:layout_constraintTop_toBottomOf="@id/radioGroupFiltro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margen_app"/>

    <!-- RecyclerView para mostrar las bebidas -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCocktails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnFiltrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/margen_app" />

</androidx.constraintlayout.widget.ConstraintLayout>
