<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crash_white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CocktailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margen_app">

        <ToggleButton
            android:id="@+id/toggleButtonFavorito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textOff="@string/togglebutton_no_favorite"
            android:textOn="@string/togglebutton_favorite"
            android:backgroundTint="@color/light_red"
            />

        <!-- Nombre del cóctel -->
        <TextView
            android:id="@+id/nomCocktail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tv_nombre_cocktail_size"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toBottomOf="@id/toggleButtonFavorito"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Foto del cóctel -->
        <ImageView
            android:id="@+id/imgCocktail"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toBottomOf="@id/nomCocktail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:contentDescription="@string/content_descr_cocktail"/>

        <!-- Ingredientes del cóctel TV -->
        <TextView
            android:id="@+id/ingredientesCocktail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_ingredientes_cocktail"
            android:layout_marginTop="@dimen/margen_app"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/imgCocktail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Lista ingredientes -->
        <LinearLayout
            android:id="@+id/bloqueIngredientesCocktail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toBottomOf="@id/ingredientesCocktail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bloqueIngredientesCocktail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toBottomOf="@id/bloqueIngredientesCocktail1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bloqueIngredientesCocktail3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toBottomOf="@id/bloqueIngredientesCocktail2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </LinearLayout>

        <!-- Medidas de los ingredientes del cóctel TV -->
        <TextView
            android:id="@+id/medidasIngredientesCocktail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_medidas_ingredientes_cocktail"
            android:layout_marginTop="@dimen/margen_app"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/bloqueIngredientesCocktail3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Lista medidas de los ingredientes -->
        <LinearLayout
            android:id="@+id/medIngredientesCocktail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toBottomOf="@id/medidasIngredientesCocktail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/medIngredientesCocktail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toBottomOf="@id/medIngredientesCocktail1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/medIngredientesCocktail3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toBottomOf="@id/medIngredientesCocktail2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </LinearLayout>

        <!-- Preparación del cóctel TV -->
        <TextView
            android:id="@+id/instCocktail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_app"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/medIngredientesCocktail3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>