<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/crash_white"
    tools:context=".fragments.AleatorioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margen_app">

        <!-- Nombre del cóctel -->
        <TextView
            android:id="@+id/nombreCocktail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tv_nombre_cocktail_size"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Foto del cóctel -->
        <ImageView
            android:id="@+id/fotoCocktail"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toBottomOf="@id/nombreCocktail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:contentDescription="@string/content_descr_cocktail"/>

        <!-- Contenedor de títulos -->
        <LinearLayout
            android:id="@+id/contenedorTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toBottomOf="@id/fotoCocktail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- TextView Ingredientes -->
            <TextView
                android:id="@+id/tvIngredientes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_ingredientes_cocktail"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margen_app"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- TextView Medidas -->
            <TextView
                android:id="@+id/tvMedidas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_medidas_ingredientes_cocktail"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/margen_app"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </LinearLayout>

        <!-- Contenedor de ingredientes y medidas -->
        <LinearLayout
            android:id="@+id/contenedorIngredientesMedidas1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toBottomOf="@+id/contenedorTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Lista ingredientes -->
            <LinearLayout
                android:id="@+id/parejasIngredientesCocktail1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
            </LinearLayout>

            <!-- Lista medidas de los ingredientes -->
            <LinearLayout
                android:id="@+id/medidasIngredientesCocktail1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contenedorIngredientesMedidas2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toBottomOf="@+id/contenedorIngredientesMedidas1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Lista ingredientes -->
            <LinearLayout
                android:id="@+id/parejasIngredientesCocktail2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
            </LinearLayout>

            <!-- Lista medidas de los ingredientes -->
            <LinearLayout
                android:id="@+id/medidasIngredientesCocktail2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contenedorIngredientesMedidas3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toBottomOf="@+id/contenedorIngredientesMedidas2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Lista ingredientes -->
            <LinearLayout
                android:id="@+id/parejasIngredientesCocktail3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
            </LinearLayout>

            <!-- Lista medidas de los ingredientes -->
            <LinearLayout
                android:id="@+id/medidasIngredientesCocktail3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
            </LinearLayout>

        </LinearLayout>

        <!-- Preparación del cóctel TV -->
        <TextView
            android:id="@+id/instruccionesCocktail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_app"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/contenedorIngredientesMedidas3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_app"
            app:layout_constraintTop_toBottomOf="@id/instruccionesCocktail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="ca-app-pub-6209459664558185/6448808255">
        </com.google.android.gms.ads.AdView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
